err/django-mediagenie.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_mediagenie-0.1.5.egg-info'...
Listing './lib/python3.5/site-packages/mediagenie'...
Listing './lib/python3.5/site-packages/mediagenie/contrib'...
Compiling './lib/python3.5/site-packages/mediagenie/env.py'...
***   File "./lib/python3.5/site-packages/mediagenie/env.py", line 27
    print 'Loading settings from Django'
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mediagenie/generate.py'...
***   File "./lib/python3.5/site-packages/mediagenie/generate.py", line 45
    print "Generating bundle", bundle.name
                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mediagenie/generators'...
Compiling './lib/python3.5/site-packages/mediagenie/generators/images.py'...
***   File "./lib/python3.5/site-packages/mediagenie/generators/images.py", line 80
    print 'Generating images: %d total images, %d new' % (images, new_images)
                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mediagenie/management'...
Listing './lib/python3.5/site-packages/mediagenie/management/commands'...
Listing './lib/python3.5/site-packages/mediagenie/templatetags'...
Listing './lib/python3.5/site-packages/mediagenie/transforms'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
